--- a/web/src/main/webapp/usuario/usuario.xhtml
+++ b/web/src/main/webapp/usuario/usuario.xhtml
@@ -105,7 +105,7 @@
 
                                         </div>
                                         <p:commandButton value="Responder comentarios"
-                                                         action="#{inicioBean.irADetalle(lugar.id)}"
+                                                         action="#{usuarioBean.irAlDetalleCreador(lugar.id)}"
                                                          styleClass="ui-button-raised" icon="pi pi-arrow-right"
                                                          iconPos="right"/>
                                     </div>
