--- a/web/src/main/webapp/index.xhtml
+++ b/web/src/main/webapp/index.xhtml
@@ -19,6 +19,22 @@
 
     <ui:define name="title">Unilocal | Home</ui:define>
 
+    <p:card style="width: 25em">
+        <f:facet name="header">
+            <img alt="user header" src="/resources/img/"/>
+        </f:facet>
+        <f:facet name="title">
+            nombre
+        </f:facet>
+        <f:facet name="raiting">
+            <p:rating value="" readonly="true"/>
+        </f:facet>
+        <p> descripcion </p>
+        <f:facet name="footer">
+            <p:commandButton icon="pi pi-check" value="Save"/>
+        </f:facet>
+    </p:card>
+
     <ui:define name="content">
         <div id="mapa">
             <div id="map"></div>
@@ -29,20 +45,22 @@
                     <strong>Filtros</strong>
                 </div>
                 <div>
-                    <nav class="navbar navbar-expand-md bg-light navbar-light" >
+                    <nav class="navbar navbar-expand-md bg-light navbar-light">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
                                 <p:selectOneMenu id="ciudades" value="#{filtrosBean.ciudad}"
                                                  converter="#{ciudadConverter}">
                                     <f:selectItem itemLabel="Seleccione una ciudad: " noSelectionOption="true"/>
-                                    <f:selectItems var="ciudad" itemLabel="#{ciudad.nombre}" value="#{filtrosBean.ciudades}"/>
+                                    <f:selectItems var="ciudad" itemLabel="#{ciudad.nombre}"
+                                                   value="#{filtrosBean.ciudades}"/>
                                 </p:selectOneMenu>
                             </li>
                             <li class="nav-item" style="margin-left: 3%;">
 
                                 <p:selectOneMenu id="calificacion" value="#{filtrosBean.calificacion}">
                                     <f:selectItem itemLabel="Seleccione puntuación:" noSelectionOption="true"/>
-                                    <f:selectItems var="calificacion" itemLabel="#{calificaion}" value="#{filtrosBean.calificaciones}"/>
+                                    <f:selectItems var="calificacion" itemLabel="#{calificaion}"
+                                                   value="#{filtrosBean.calificaciones}"/>
                                 </p:selectOneMenu>
 
                             </li>
