--- a/web/src/main/webapp/index.xhtml
+++ b/web/src/main/webapp/index.xhtml
@@ -48,7 +48,7 @@
                     <nav class="navbar navbar-expand-md bg-light navbar-light">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
-                                <p:selectOneMenu id="ciudades" value="#{filtrosBean.ciudad}"
+                                <p:selectOneMenu id="ciudades" value="#{filtrosBean.ciudadParam}"
                                                  converter="#{ciudadConverter}">
                                     <f:selectItem itemLabel="Seleccione una ciudad: " noSelectionOption="true"/>
                                     <f:selectItems var="ciudad" itemLabel="#{ciudad.nombre}"
@@ -57,7 +57,7 @@
                             </li>
                             <li class="nav-item" style="margin-left: 3%;">
 
-                                <p:selectOneMenu id="calificacion" value="#{filtrosBean.calificacion}">
+                                <p:selectOneMenu id="calificacion" value="#{filtrosBean.calificacionParam}">
                                     <f:selectItem itemLabel="Seleccione puntuación:" noSelectionOption="true"/>
                                     <f:selectItems var="calificacion" itemLabel="#{calificaion}"
                                                    value="#{filtrosBean.calificaciones}"/>
@@ -65,22 +65,22 @@
 
                             </li>
                             <li class="nav-item" style="margin-left: 3%;">
-                                <p:selectOneMenu id="categoria" value="#{filtrosBean.categoria}"
+                                <p:selectOneMenu id="categoria" value="#{filtrosBean.categoriaParam}"
                                                  converter="#{tipoLugarConverter}">
                                     <f:selectItem itemLabel="Seleccione una categoria: " noSelectionOption="true"/>
                                     <f:selectItems var="tipo" itemLabel="#{tipo.nombre}" value="#{filtrosBean.tipos}"/>
                                 </p:selectOneMenu>
                             </li>
                             <li class="nav-item" style="margin-left: 3%;">
-                                <p:selectOneMenu id="distancia" value="#{lugarBean.lugar.tipoLugar}"
-                                                 converter="#{tipoLugarConverter}">
+                                <p:selectOneMenu id="distancia" value="#{filtrosBean.rangoParam}">
                                     <f:selectItem itemLabel="Seleccione un rango: " noSelectionOption="true"/>
-                                    <f:selectItems var="tipo" itemLabel="#{tipo.nombre}" value="#{lugarBean.tipos}"/>
+                                    <f:selectItems var="rango" itemLabel="#{rango}" value="#{filtrosBean.rangos}"/>
                                 </p:selectOneMenu>
                             </li>
                             <li class="nav-item" style="margin-left: 3%;">
                                 <p:commandButton styleClass="btn btn-outline-light btn-buscar" value="Buscar"
-                                                 icon="pi pi-search" iconPos="righ" action="#{busquedaBean.buscar}"/>
+                                                 icon="pi pi-search" iconPos="righ"
+                                                 action="#{filtrosBean.buscarPorRango()}"/>
                             </li>
                         </ul>
                     </nav>
@@ -92,7 +92,7 @@
                 </div>
                 <div>
                     <h:form id="form">
-                        <p:dataView var="lugar" value="#{inicioBean.lugares}" rows="12" paginator="true"
+                        <p:dataView var="lugar" value="#{inicioBean.lugares}" rows="6" paginator="true"
                                     gridIcon="pi pi-th-large" listIcon="pi pi-bars">
 
                             <p:dataViewGridItem>
